# cookiecutter-py-quarto

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  tutorial.md
docs/features/: linting.md
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .env-sample  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json  postCreateCommand.sh
{{cookiecutter.project_name}}/.github/: pull_request_template.md
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/conf/: config.yaml
{{cookiecutter.project_name}}/notebooks/: README.md
{{cookiecutter.project_name}}/paper/: _conclusion.qmd  _data.qmd  _introduction.qmd  _quarto.yaml  _variables.yml  index.qmd  title.tex
{{cookiecutter.project_name}}/slides/long-form/: _conclusion.qmd  _introduction.qmd  _quarto.yml  custom.scss  index.qmd  references.bib
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __main__.py  exceptions.py  pipeline.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/tables/: quarto_table.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/utils/: directories.py  files.py
{{cookiecutter.project_name}}/tests/utils/: test_files.py
